# angorapy-tutorials

./: .gitignore  02-custom-models.ipynb  03-custom-recurrent-models.ipynb  04.2-model-inspection-acrobot.ipynb  04.3-model-inspection-pendulum.ipynb  README.md  custom-models.ipynb  custom-tasks.ipynb  get-started.ipynb  learning-ihom.ipynb  model-inspection.ipynb  pyproject.toml  requirements.txt
analysis/: 05-model-inspection.ipynb  05.1-model-inspection-lunarlander.ipynb  optional_model_training.py
customization/: README.md
customization/modeling/: 02-custom-models.ipynb  03-custom-recurrent-models.ipynb
customization/tasks/: 04-custom-simple-task.ipynb  README.md  thumbs-up-task.py
get-started/: 01-get-started.ipynb  README.md
storage/saved_models/1782235840435716/19/: optimizer_weights.npz  parameters.json  weights.data-00000-of-00001  weights.index
storage/saved_models/1782235840435716/best/: optimizer_weights.npz  parameters.json  weights.data-00000-of-00001  weights.index
storage/saved_models/1782235840435716/last/: parameters.json  weights.data-00000-of-00001  weights.index
storage/saved_models/1782248882733486/best/: optimizer_weights.npz  parameters.json  weights.data-00000-of-00001  weights.index
storage/saved_models/1782248882733486/last/: optimizer_weights.npz  parameters.json  weights.data-00000-of-00001  weights.index
storage/saved_models/1782249915849590/best/: optimizer_weights.npz  parameters.json  weights.index
storage/saved_models/1782249915849590/last/: parameters.json  weights.data-00000-of-00001
(+11 files in other folders)
